# miniyt

./: .eslintrc.cjs  .prettierignore  .prettierrc  .rustfmt.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
config/: config.dev.toml  config.toml  nginx.conf
src/: config.rs  entry.deno.ts  error.rs  main.rs  root.tsx  utility.rs
src/components/channel-banner/: channel-banner.tsx
src/components/group/: group.tsx
src/components/notification/: notification.tsx
src/components/router-head/: router-head.tsx
src/components/thumbnail/: thumbnail.tsx
src/data/: mod.rs
src/integration/: mod.rs
src/routes/: index.tsx  layout.tsx  mod.rs
src/routes/api/: channel.rs
src/routes/channel-[id]/: index.tsx
src/routes/subscriptions/: index.tsx
src/routes/video-[id]/: index.tsx
web/: index.html  package.json  pnpm-lock.yaml
web/src/components/: TheWelcome.vue
web/src/views/: AboutView.vue
