[workspace]
members = []
resolver = "2"

[package]
name = "miniyt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

# config / data
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"

# web
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace", "fs"] }
tower-livereload = "0.9.2"

# live reload helpers
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"

# utils
thiserror = "1.0.56"
reqwest = "0.11.24"

# logging
log = "0.4.20"
env_logger = "0.11.1"
